fix: corrige nível de conhecimento em UX/UI Design.

--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
 
                     <div class="stars">
                         <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
                     </div>
 
                     <h3 class="title low" data-i18n="stacks_ux_ui_design"></h3>
