--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <i class="fas fa-star"></i>
                     </div>
 
-                    
+                    <h3 class="title high" data-i18n="stacks_html"></h3>
                 </li>
 
                 <li class="col">
