fix: corrige bug no portfólio.

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                         HTML, CSS, JS, Bootstrap, UX/UI
                     </p>
 
-                    <a href="https://mazalti.com.br/" target="_blank" data-i18n="portfolio_demo"></a>
+                    <a href="https://mateusdanieel.github.io/mazal_ti" target="_blank" data-i18n="portfolio_demo"></a>
 
                     <a href="https://github.com/MateusDanieel/mazal_ti" target="_blank" data-i18n="portfolio_source_code"></a>
                 </div>
