chore: corrige bugs e finaliza migração de estrutura.

--- a/app/index.html
+++ b/app/index.html
@@ -10,12 +10,12 @@
     <meta property="og:title" content="Desenvolvedor Front-End | Mateus Daniel">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mateusdanieel.github.io/">
-    <meta property="og:image" content="dist/img/profile.jpg">
+    <meta property="og:image" content="img/profile.jpg">
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
     <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
     <link rel="icon" href="icon.png">
-    <link rel="stylesheet" href="dist/css/main.min.css">
+    <link rel="stylesheet" href="dist/css/style.min.css">
     <meta name="theme-color" content="#2D2E32">
 </head>
 
@@ -92,7 +92,7 @@
 
             <div class="esq">
                 <figure>
-                    <img src="dist/img/profile.jpg" alt="" />
+                    <img src="img/profile.jpg" alt="" />
                 </figure>
 
                 <h2 class="title" data-i18n="sobre_title"></h2>
@@ -400,7 +400,7 @@
             <div class="wrapper">
 
                 <div class="col">
-                    <img src="dist/img/2017_TCC_PTL.png" alt="" />
+                    <img src="img/2017_TCC_PTL.png" alt="" />
 
                     <h2 class="title">Pitylu Kids <small>&copy;</small> (TCC)</h2>
 
@@ -411,13 +411,13 @@
                         HTML, CSS, JS, jQuery, PHP, UX/UI
                     </p>
 
-                    <a href="./dist/img/2017_TCC_PTL_INDEX.png" target="_blank" data-i18n="portfolio_demo"></a>
+                    <a href="./img/2017_TCC_PTL_INDEX.png" target="_blank" data-i18n="portfolio_demo"></a>
 
                     <a href="https://github.com/MateusDanieel/tcc-etec-ptl" target="_blank" data-i18n="portfolio_source_code"></a>
                 </div>
                 
                 <div class="col">
-                    <img src="dist/img/2018_TST_ONLINE.png" alt="" />
+                    <img src="img/2018_TST_ONLINE.png" alt="" />
 
                     <h2 class="title">TST Online <small>&copy;</small></h2>
 
@@ -437,7 +437,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_CONDUAPP.png" alt="" />
+                    <img src="img/2019_CONDUAPP.png" alt="" />
 
                     <h2 class="title">Conduapp Online <small>&copy;</small></h2>
 
@@ -451,13 +451,13 @@
                         HTML, CSS, JS, Bootstrap, UX/UI
                     </p>
 
-                    <a href="dist/img/2019_CONDUAPP_LAYOUT.png" target="_blank" data-i18n="portfolio_demo"></a>
+                    <a href="img/2019_CONDUAPP_LAYOUT.png" target="_blank" data-i18n="portfolio_demo"></a>
 
                     <a href="#" target="_blank" data-i18n="portfolio_source_code"></a>
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_AM_TOUR.png" alt="" />
+                    <img src="img/2019_AM_TOUR.png" alt="" />
 
                     <h2 class="title">AM Turismo Viagens <small>&copy;</small></h2>
 
@@ -477,7 +477,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_MAZAL_TI.png" alt="" />
+                    <img src="img/2019_MAZAL_TI.png" alt="" />
 
                     <h2 class="title">Mazal TI <small>&copy;</small></h2>
 
@@ -497,7 +497,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_SYS_CLASSIFICADOS_THUMB.png" alt="" />
+                    <img src="img/2019_SYS_CLASSIFICADOS_THUMB.png" alt="" />
 
                     <h2 class="title">Classificados</h2>
 
@@ -511,13 +511,13 @@
                         HTML, CSS, JS, Bootstrap, UX/UI
                     </p>
 
-                    <a href="dist/img/2019_SYS_CLASSIFICADOS.png" target="_blank" data-i18n="portfolio_demo"></a>
+                    <a href="img/2019_SYS_CLASSIFICADOS.png" target="_blank" data-i18n="portfolio_demo"></a>
 
                     <a href="#" target="_blank" data-i18n="portfolio_source_code"></a>
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_SYS_GESTAO_EMP_LANDING_THUMB.png" alt="" />
+                    <img src="img/2019_SYS_GESTAO_EMP_LANDING_THUMB.png" alt="" />
 
                     <h2 class="title">Landing Sistema de Gestão</h2>
 
@@ -531,13 +531,13 @@
                         HTML, CSS, JS, Bootstrap, UX/UI
                     </p>
 
-                    <a href="dist/img/2019_SYS_GESTAO_EMP_LANDING.png" target="_blank" data-i18n="portfolio_demo"></a>
+                    <a href="img/2019_SYS_GESTAO_EMP_LANDING.png" target="_blank" data-i18n="portfolio_demo"></a>
 
                     <a href="#" target="_blank" data-i18n="portfolio_source_code"></a>
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_SYS_GESTAO_EMP.png" alt="" />
+                    <img src="img/2019_SYS_GESTAO_EMP.png" alt="" />
 
                     <h2 class="title">Sistema de Gestão</h2>
 
@@ -551,13 +551,13 @@
                         HTML, CSS, JS, Bootstrap, UX/UI
                     </p>
 
-                    <a href="dist/img/2019_SYS_GESTAO_EMP.png" target="_blank" data-i18n="portfolio_demo"></a>
+                    <a href="img/2019_SYS_GESTAO_EMP.png" target="_blank" data-i18n="portfolio_demo"></a>
 
                     <a href="#" target="_blank" data-i18n="portfolio_source_code"></a>
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_SYS_VAGAS_EMP_LANDING_THUMB.png" alt="" />
+                    <img src="img/2019_SYS_VAGAS_EMP_LANDING_THUMB.png" alt="" />
 
                     <h2 class="title">Landing Vagas de Emprego</h2>
 
@@ -571,13 +571,13 @@
                         HTML, CSS, JS, Bootstrap, UX/UI
                     </p>
 
-                    <a href="dist/img/2019_SYS_VAGAS_EMP_LANDING.png" target="_blank" data-i18n="portfolio_demo"></a>
+                    <a href="img/2019_SYS_VAGAS_EMP_LANDING.png" target="_blank" data-i18n="portfolio_demo"></a>
 
                     <a href="#" target="_blank" data-i18n="portfolio_source_code"></a>
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_SYS_VAGAS_EMP.png" alt="" />
+                    <img src="img/2019_SYS_VAGAS_EMP.png" alt="" />
 
                     <h2 class="title">Vagas de Emprego</h2>
 
@@ -591,13 +591,13 @@
                         HTML, CSS, JS, Bootstrap, UX/UI
                     </p>
 
-                    <a href="dist/img/2019_SYS_VAGAS_EMP.png" target="_blank" data-i18n="portfolio_demo"></a>
+                    <a href="img/2019_SYS_VAGAS_EMP.png" target="_blank" data-i18n="portfolio_demo"></a>
 
                     <a href="#" target="_blank" data-i18n="portfolio_source_code"></a>
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_TEMPLATE_01.png" alt="" />
+                    <img src="img/2019_TEMPLATE_01.png" alt="" />
 
                     <h2 class="title">Template para Landing</h2>
 
@@ -617,7 +617,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_TEMPLATE_02.png" alt="" />
+                    <img src="img/2019_TEMPLATE_02.png" alt="" />
 
                     <h2 class="title">Template para Landing</h2>
 
@@ -637,7 +637,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_TEMPLATE_03.png" alt="" />
+                    <img src="img/2019_TEMPLATE_03.png" alt="" />
 
                     <h2 class="title">Template para Landing</h2>
 
@@ -657,7 +657,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_TEMPLATE_04.png" alt="" />
+                    <img src="img/2019_TEMPLATE_04.png" alt="" />
 
                     <h2 class="title">Template para Landing</h2>
 
@@ -671,7 +671,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_PIZZARIA.png" alt="" />
+                    <img src="img/2019_PIZZARIA.png" alt="" />
 
                     <h2 class="title">Sistema para Pizzaria</h2>
 
@@ -679,7 +679,7 @@
 
                     <p class="intro"><b data-i18n="portfolio_stacks"></b> HTML, CSS, JS, Bootstrap, UX/UI</p>
 
-                    <a href="dist/img/2019_PIZZARIA_LAYOUT.png" target="_blank" data-i18n="portfolio_demo">
+                    <a href="img/2019_PIZZARIA_LAYOUT.png" target="_blank" data-i18n="portfolio_demo">
                         
                     </a>
 
@@ -689,7 +689,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2019_PORTFOLIO.png" alt="" />
+                    <img src="img/2019_PORTFOLIO.png" alt="" />
 
                     <h2 class="title">Portfólio (Antigo)</h2>
 
@@ -707,7 +707,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2020_COVID_19.png" alt="" />
+                    <img src="img/2020_COVID_19.png" alt="" />
 
                     <h2 class="title">Triagem Covid-19</h2>
 
@@ -725,7 +725,7 @@
                 </div>
 
                 <div class="col">
-                    <img src="dist/img/2021_PORTFOLIO.png" alt="" />
+                    <img src="img/2021_PORTFOLIO.png" alt="" />
 
                     <h2 class="title">Portfólio (Novo)</h2>
 
@@ -1327,7 +1327,7 @@
         </div>
     </footer>
 
-    <script src="dist/js/main.min.js"></script>
+    <script src="dist/js/script.min.js"></script>
 
 </body>
 </html>
